# raytracer

./: Cargo.toml  README.md
src/: bvh.rs  camera.rs  create_scene.rs  lib.rs  main.rs  material.rs  ray.rs  shape.rs  utility.rs  vec3.rs
src/bvh/: aabb.rs  bvh.rs  bvh_sah.rs
src/geometry/: bvh.rs  hittable.rs  material.rs  mod.rs  scatterable.rs  sphere.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  scatterable.rs
src/shape/: hittable.rs  sphere.rs  triangle_mesh.rs
