[package]
name = "raytrace-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.8"
image = "0.24.2"
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.5.3"
partition = "0.1.2"
assert_approx_eq = "1.1.0"
